--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,9 @@
-No restaurants yet motherfuckers!
+<% if @restaurants.any? %>
+  <% @restaurants.each do |restaurant| %>
+    <h2><%= restaurant.name%></h2>
+    <% end %>
+  <%else %>
+    <h1>No restaurants yet motherfuckers!</h1>
+  <%end%>
 
-<a href ='#'>Add a restaurant</a>
+  <a href ='#'>Add a restaurant</a>
