--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,10 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
+    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <% end %>
   <%else %>
     <h1>No restaurants yet motherfuckers!</h1>
-  <%end%>
+  <%end%><br>
 
   <%= link_to "Add a restaurant", new_restaurant_path %>
