--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,9 +3,10 @@
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
     <% end %>
   <%else %>
-    <h1>No restaurants yet motherfuckers!</h1>
+    <h1>No restaurants yet baby!</h1>
   <%end%><br>
 
   <%= link_to "Add a restaurant", new_restaurant_path %>
