--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,17 @@
 <% if @restaurants.any? %>
   <% @restaurants.each do |restaurant| %>
+    <h3>Reviews for <%= restaurant.name %></h3>
+    <% if restaurant.reviews.any? %>
+      <ul>
+        <% restaurant.reviews.each do |review| %>
+          <li>
+            <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <p>No reviews.</p>
+    <% end %>
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
