--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -17,7 +17,7 @@
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
     <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
-    <h3>Average rating: <%= restaurant.average_rating.to_i %></h3>
+    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <% end %>
   <%else %>
     <h1>No restaurants yet baby!</h1>
