--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,8 +7,8 @@
           <li>
             <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
             <%= link_to "Delete Review", review_path(review), method: :delete %>
-            <%= link_to "Endorse Review", new_review_endorsement_path(review) %>
-            <p><%= pluralize review.endorsements.count, 'endorsement' %></p>
+            <%= link_to "Endorse", review_endorsements_path(review), class: 'endorsements-link' %>
+            <span class="endorsements_count"> <%= review.endorsements.count %> </span> <%= 'endorsement'.pluralize(review.endorsements.count) %>
           </li>
         <% end %>
       </ul>
